<resources>
    <string name="app_name">BookShop</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username_edit">Username</string>
    <string name="email_edit">E-mail</string>
    <string name="password_edit">Password</string>
    <string name="register_button">Register</string>
    <string name="signup_to_login">Already have an account?</string>
    <string name="login_button">Login</string>
    <string name="login_to_signup">Need a new account?</string>
    <string name="username_edit_error">Enter username!</string>
    <string name="email_edit_error">Enter e-mail!</string>
    <string name="password_edit_error">Enter password!</string>
    <string name="title_activity_book">Book</string>
    <string name="select_category">Select a category</string>
    <string name="title_activity_review">All reviews</string>
    <string name="submit_review">Submit review</string>
    <string name="your_review">Your review:</string>
    <string name="submit_review_button">Submit</string>
</resources>